Added post method in frontend and corrected dto/entity mapping to be hibernate friendly.